[package]
name = "mcp25625"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/romixlab/mcp25625"
description = "MCP25625 and MCP2515 SPI-CANBus no_std driver"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2"
vhrdcan = { version = "0.1.0" }